# attn_res

./: README.md  example.py  pyproject.toml
attn_res/: __init__.py  main.py
