[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "attn_res"
version = "0.1.0"
description = "Single-file PyTorch implementation of Attention Residuals (Kimi Team, 2026) with GQA, SwiGLU, and RoPE."
license = "MIT"
authors = ["Kye Gomez <kye@swarms.world>"]
readme = "README.md"
repository = "https://github.com/kyegomez/attn_res"
keywords = [
    "attention residuals",
    "transformers",
    "deep learning",
    "grouped query attention",
    "language model",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
torch = "*"


[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
pytest = "*"


[tool.ruff]
line-length = 88

[tool.black]
target-version = ["py310"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
